--- a/examples/configs/config.aws.example.json
+++ b/examples/configs/config.aws.example.json
@@ -5,18 +5,17 @@
   "_comment_gateway_mac": "Gateway MAC address (12 hex digits, with or without colons). If omitted, automatically uses this device's MAC address",
 
   "mqtt": {
-    "endpoint": "a1b2c3d4e5f6g7-ats.iot.us-east-1.amazonaws.com",
+    "broker": "a1b2c3d4e5f6g7-ats.iot.us-east-1.amazonaws.com",
     "port": 8883,
     "client_id": "ble-gateway-001",
     "topic": "ble/gateway/data",
-    "auth_type": "mtls",
     "qos": 1,
     "keepalive": 60,
-    
+
     "_comment_certs": "Your AWS IoT certificates - get from AWS IoT Console",
-    "ca_certs": "certs/AmazonRootCA1.pem",
-    "certfile": "certs/certificate.pem.crt",
-    "keyfile": "certs/private.pem.key"
+    "root_ca_path": "certs/AmazonRootCA1.pem",
+    "cert_path": "certs/certificate.pem.crt",
+    "key_path": "certs/private.pem.key"
   },
   
   "publish_interval_sec": 0.0,
