--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "ble-gateway"
 version = "1.0.0"
-description = "Professional BLE gateway for AWS IoT Core - captures BLE advertisements and publishes to MQTT"
+description = "BLE gateway - captures BLE advertisements and publishes to any MQTT broker"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
@@ -14,7 +14,6 @@ authors = [
 keywords = [
     "bluetooth",
     "ble",
-    "aws-iot",
     "iot",
     "gateway",
     "mqtt",
