--- a/ble-gateway.service
+++ b/ble-gateway.service
@@ -10,16 +10,16 @@ User=pi
 Group=pi
 WorkingDirectory=/home/pi/opt/ble_gateway
 
-# Use the virtual environment Python
-ExecStart=/home/pi/opt/ble_gateway/venv/bin/python3 /home/pi/opt/ble_gateway/ble_gateway.py -c /home/pi/opt/ble_gateway/config.json -v
+# Use the virtual environment Python (paths relative to WorkingDirectory)
+ExecStart=venv/bin/python3 ble_gateway.py -c config.json --log-level INFO
 
 # Restart policy
 Restart=always
 RestartSec=10
 
 # Resource limits to prevent excessive CPU usage
-CPUQuota=50%
-MemoryMax=512M
+CPUQuota=10%
+MemoryMax=256M
 
 # Security hardening
 NoNewPrivileges=true
